<resources>
    <!-- Activities titles -->
    <string name="app_name">RUEDAS RARAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Acerca de</string>

    <!-- Menu -->
    <string name="menu_qr_reader">LECTOR QR</string>
    <string name="menu_schedule">HORARIOS</string>
    <string name="menu_temoto_hints">JUEGO TEMOTO</string>
    <string name="menu_partners">COLABORADORES</string>
    <string name="menu_rr_face">RUEDAS RARAS</string>
    <string name="menu_ayto_face">AYTO. TORO</string>

    <!-- Events detail activity -->
    <string name="title_activity_event_details">Detalles del evento</string>
    <string name="event_details_name">Evento:</string>
    <string name="event_details_description">Descripción:</string>
    <string name="event_details_date">Fecha:</string>
    <string name="event_details_time">Hora:</string>
    <string name="event_details_location">Lugar:</string>
    <string name="title_activity_event_location">EventLocation</string>
    <string name="open_maps_button">Ver en Maps</string>

    <!-- About texts-->
    <string name="about_author">Pablo Álvarez García</string>
    <string name="about_contact">p852pa@gmail.com</string>
    <string name="about_year">2019</string>
    <string name="about_privacy">Esta aplicación no obtiene ni almacena información del usuario.
        \n\nEn el dispositivo únicamente se guardia una copia de los eventos almacenados en Google Firebase
        \n\nLa cámara únicamente se utiliza para leer códigos QR, no tiene capacidad para hacer fotos ni vídeos.
    </string>
    <!-- QR reader activity -->
    <string name="scan_activity_center_qr">Centra el código QR en el área</string>
    <string name="title_activity_qr_scanner">LECTOR QR</string>

    <!-- Schedule activity -->
    <string name="title_activity_schedule">HORARIOS</string>
    <string name="tab1">VIE. 26</string>
    <string name="tab2">SAB. 27</string>
    <string name="tab3">DOM. 28</string>

    <!-- TemotoHints activity -->
    <string name="title_activity_hints">PISTAS</string>
    <string name="expl_txt">Pistas encontradas:</string>
    <string name="instructions">
        En la relación de colaboradores que se indica a continuación, encontrarás códigos “BIDI” o QR, que deberás
        escanear para obtener las pistas. Busca y escanea todas las pistas! (6 en total)
        \n\nCuando termines y resuelvas las pistas, deposita en la caja del concurso, situada en la Cafetería Imperial, el
        boleto de participación (que encontrarás jugando). Pon tu nombre, teléfono y el código de números de las pistas.
        Participa en el sorteo de una noche en el Hotel María de Molina.
        \n\nNotas e instrucciones del juego: \n
        • El boleto de participación, será un símil de un billete de 500 €, que será entregado en uno de los
        establecimientos colaboradores con el juego (incluido en una de las pistas) \n
        • Solo podrás completar el código si escaneas todas las pistas \n
        • El resultado será una serie de 8 números (##-##-##-##) \n
        • Indicar, a bolígrafo, en el boleto (Billete): Nombre, Teléfono y el Resultado
        \n\nEstablecimientos colaboradores (donde encontrarás los códigos “Qr” con las pistas): \n
        • Cafetería Imperial (Pista 1) \n
        • Bar El Último de la Fila (Pista 2) \n
        • Hotel María de Molina (Pista 3) \n
        • Bar Restaurante La Colegiata (Pista 4) \n
        • Bar Jayda (Pista 5) \n
        • Bar La Comedia (Pista 6) \n
    </string>
</resources>
