<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item   
                android:id="@+id/nav_qr_reader"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_qr_reader"/>
        <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/icons_planificador"
                android:title="@string/menu_schedule"/>
        <item
                android:id="@+id/nav_temoto_hints"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_temoto_hints"/>
        <item
                android:id="@+id/nav_temoto_guide"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_temoto_guide"/>
    </group>

    <item android:title="Social" >
        <menu>
            <item
                    android:id="@+id/nav_rr_face"
                    android:icon="@drawable/icons_facebook"
                    android:title="@string/menu_rr_face"/>
            <item
                    android:id="@+id/nav_ayto_face"
                    android:icon="@drawable/icons_facebook"
                    android:title="@string/menu_ayto_face"/>
        </menu>
    </item>
</menu>
